# minject-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js
implementors/serde/de/: trait.Deserialize.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
minject/: enum.Error.html  enum.InitError.html  index.html  macro.initializer!.html  sidebar-items.js  struct.Module.html  struct.ModuleBuilder.html  struct.ModuleBuilderWithInit.html  struct.Shared.html
minject/handle/: sidebar-items.js  struct.Shared.html
minject/inject/: enum.Error.html  sidebar-items.js  struct.Module.html  struct.ModuleBuilder.html  struct.ModuleBuilderWithInit.html
minject/process/: index.html  sidebar-items.js  struct.Child.html  struct.ChildStderr.html  struct.ChildStdin.html  struct.ChildStdout.html  struct.Command.html  struct.ExitStatus.html  struct.Output.html  struct.Stdio.html
src/: handle.rs  init.rs  inject.rs  lib.rs  process.rs  stub32.asm  stub64.asm  thunk32.asm  thunk64.asm
src/minject/: init.rs.html  inject.rs.html  lib.rs.html  process.rs.html
src/minject/src/: handle.rs.html  init.rs.html  inject.rs.html  lib.rs.html  process.rs.html
(+3 files in other folders)
