[package]
name = "minject"
description = "A code injection library for the Rust programming language"
version = "0.1.0"
authors = ["Jascha Neutelings"]
repository = "https://github.com/Jascha-N/minject-rs"
license = "BSD-2-Clause"
#readme = "README.md"
build = "build.rs"

[dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
byteorder = "0.4"

[dependencies.miow]
version = "0.1"
features = ["unstable"]